# jub-api

./: .coveragerc  .env  .env.dev  .env.test  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_local.sh  xolo.yml  zensical.toml
.github/ISSUE_TEMPLATE/: 3-task.yml
.github/workflows/: run_test.yml
docs/: api-reference.md  architecture.md  conceptual-model.md  data-model.md  data_model.md  examples.md  index.md  migration-guide.md  model_conceptual.md  v1.md
jubapi/: server.py
jubapi/config/: __init__.py
jubapi/controllers/: catalogs.py  observatories.py  products.py
jubapi/controllers/v1/: __init__.py  catalogs.py  observatories.py  products.py
jubapi/controllers/v2/: nameservice.py  observatory.py  products.py  xvariable.py
jubapi/db/: __init__.py  constants.py
jubapi/dto/: product.py
jubapi/dto/v1/: __init__.py  catalog.py  observatory.py  product.py
jubapi/errors/: __init__.py
jubapi/log/: log.py
jubapi/models/: __init__.py
jubapi/models/v1/: __init__.py
jubapi/models/v2/: __init__.py
jubapi/querylang/v4/: parser.py
jubapi/repositories/: catalog.py
jubapi/repositories/v1/: __init__.py  catalog.py  observatory.py  products.py  rating.py
jubapi/repositories/v2/: __init__.py
jubapi/repositories/v4/: __init__.py  base.py
jubapi/services/: __init__.py
jubapi/services/v1/: __init__.py
jubapi/services/v2/: __init__.py
tests/: conftest.py  pytest.ini  test_catalogs.py  test_parser.py  test_queries.py  test_repositories.py  test_services.py
(+3 files in other folders)
