[tool.poetry]
name = "jubapi"
version = "0.1.0"
description = ""
authors = ["Ignacio Castillo <ignacio.bcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
fastapi = "^0.111.1"
uvicorn = "^0.30.4"
pymongo = "^4.8.0"
option = "^2.1.0"
nanoid = "^2.0.0"
pydantic = "^2.8.2"
motor = "^3.6.0"
pyparsing = "^3.2.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
requests = "^2.32.3"
pytest-asyncio = "^0.24.0"
pytest-order = "^1.3.0"
mkdocs-material = "^9.5.44"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
